registration+search+validation forms

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script src="js/jquery.tools.min.js"></script>
 	<script src="js/jquery.li-scroller.1.0.js"></script>
+	<script src="js/jquery.validate.min	.js"></script>	
 	<script src="js/common.js"></script>	
 	<!--[if lt IE 9]> 
    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
@@ -620,7 +621,7 @@
 	</div>
 	<input class="profile__param" type="text" value="Jack Daniel">
 	<input class="profile__param" type="text" value="jack_dan@mail.ru">
-	<div class="profile__city">
+	<div class="select">
 		<span>Москва</span><i></i>
 		<select>
 			<option value="Киев">Киев</option>
