--- a/stat.html
+++ b/stat.html
@@ -11,7 +11,8 @@
 	<script src="js/jquery.li-scroller.1.0.js"></script>
 	<script src="js/jHtmlArea-0.7.5.min.js"></script>
 	<script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>	
-	<script src="js/jquery-ui-1.9.1.custom.min.js"></script>		
+	<script src="js/jquery-ui-1.9.1.custom.min.js"></script>	
+	<script src="js/jquery.validate.min	.js"></script>		
 	<script src="js/common.js"></script>
 	<!--[if lt IE 9]> 
    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
@@ -481,14 +482,14 @@
 	<a href="#" class="popup-close"></a>
 	<div class="popup__title">Регистрация</div>
 	<label>E-mail<span>*</span></label>
-	<input class="txt-field" type="text">
+	<input class="txt-field" type="text" name="email">
 	<label>Пароль<span>*</span></label>
 	<div class="field-eye">
-		<input class="txt-field field-eye__text" type="text" value="">
-		<input class="txt-field field-eye__pass" type="password" value="">
+		<input class="txt-field field-eye__text" type="text" value="" name="password">
+		<input class="txt-field field-eye__pass" type="password" value="" name="password">
 		<i></i>
 	</div>
-	<div class="registration__city">
+	<div class="select">
 		<span>Москва</span><i></i>
 		<select>
 			<option value="Киев">Киев</option>
@@ -498,7 +499,7 @@
 		</select>
 	</div>
 	<label>Имя или псевдоним<span>*</span></label>
-	<input class="txt-field" type="text">
+	<input class="txt-field" type="text" name="username">
 	<label>Фамилия</label>
 	<input class="txt-field" type="text">
 	<div class="pic-load-out">
@@ -514,6 +515,14 @@
 			<span>100х100 пикселей</span>
 		</div>		
 	</div>
+	<div class="registration__captcha-out">
+		<label>Введите защитный код</label>
+		<input class="txt-field" type="text" name="captcha">
+		<div class="registration__captcha">
+			<img src="img/captcha.jpg" alt="">
+		</div>
+	</div>
+	<input type="submit" class="btn" value="Зарегистрироваться">
 </form>
 <!-- END .registration -->
 <!-- END .popups -->
